// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkListMenu renders properly 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div />
  <div
    class="mm-modal"
  >
    <div
      aria-hidden="true"
      class="mm-box mm-modal-overlay mm-box--width-full mm-box--height-full mm-box--background-color-overlay-default"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="mm-box mm-modal-content multichain-network-list-menu-content-wrapper mm-box--padding-0 mm-box--padding-top-4 mm-box--sm:padding-top-8 mm-box--md:padding-top-12 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--sm:padding-bottom-8 mm-box--md:padding-bottom-12 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-flex-start mm-box--width-screen mm-box--height-screen"
      >
        <section
          aria-modal="true"
          class="mm-box mm-modal-content__dialog mm-modal-content__dialog--size-sm multichain-network-list-menu-content-wrapper__dialog mm-box--padding-top-0 mm-box--padding-bottom-0 mm-box--display-flex mm-box--flex-direction-column mm-box--width-full mm-box--background-color-background-default mm-box--rounded-lg"
          role="dialog"
        >
          <header
            class="mm-box mm-header-base mm-modal-header mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-space-between"
          >
            <div
              class="mm-box mm-box--width-full"
            >
              <h4
                class="mm-box mm-text mm-text--heading-sm mm-text--ellipsis mm-text--text-align-center mm-box--color-text-default"
              >
                Manage networks
              </h4>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-flex-end"
              style="min-width: 0px;"
            >
              <button
                aria-label="Close"
                class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/close.svg');"
                />
              </button>
            </div>
          </header>
          <div
            class="mm-box multichain-network-list-menu"
          >
            <div
              class="mm-box mm-box--padding-top-0 mm-box--padding-right-4 mm-box--padding-bottom-2 mm-box--padding-left-4"
            >
              <div
                class="mm-box mm-text-field mm-text-field--size-lg mm-text-field--focused mm-text-field--truncate mm-text-field-search mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--width-full mm-box--background-color-background-default mm-box--rounded-md mm-box--border-width-1 box--border-style-solid"
                data-testid="search-list"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/search.svg');"
                />
                <input
                  autocomplete="off"
                  class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--margin-right-6 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                  data-testid="network-redesign-modal-search-input"
                  focused="true"
                  placeholder="Search"
                  type="search"
                  value=""
                />
              </div>
            </div>
            <div
              class="mm-box"
            >
              <div
                class="mm-box mm-box--padding-4 mm-box--display-flex mm-box--justify-content-space-between"
              >
                <p
                  class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
                >
                  Enabled networks
                </p>
              </div>
              <div
                class="mm-box characters"
                data-rbd-droppable-context-id="0"
                data-rbd-droppable-id="characters"
              >
                <div
                  aria-describedby="rbd-hidden-text-0-hidden-text-0"
                  class="mm-box"
                  data-rbd-drag-handle-context-id="0"
                  data-rbd-drag-handle-draggable-id="eip155:1"
                  data-rbd-draggable-context-id="0"
                  data-rbd-draggable-id="eip155:1"
                  draggable="false"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="mm-box multichain-network-list-item multichain-network-list-item--deselected multichain-network-list-item--not-selectable mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                    data-testid="network-list-item-eip155:1"
                  >
                    <div
                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-sm mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                    >
                      <img
                        alt="Ethereum Mainnet logo"
                        class="mm-avatar-network__network-image"
                        src="./images/eth_logo.svg"
                      />
                    </div>
                    <div
                      class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                      style="overflow: hidden;"
                    >
                      <div
                        class="mm-box mm-box--display-flex mm-box--align-items-center mm-box--width-full"
                        data-testid="Ethereum Mainnet"
                      >
                        <div
                          class="multichain-network-list-item__tooltip"
                        >
                          <div
                            class=""
                            style="display: inline;"
                            tabindex="0"
                            title=""
                          >
                            <p
                              class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                              tabindex="0"
                            >
                              Ethereum Mainnet
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                    <button
                      aria-label="Network options"
                      class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
                      data-testid="network-list-item-options-button-eip155:1"
                    >
                      <span
                        class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                        style="mask-image: url('./images/icons/more-vertical.svg');"
                      />
                    </button>
                  </div>
                </div>
                <div
                  aria-describedby="rbd-hidden-text-0-hidden-text-0"
                  class="mm-box"
                  data-rbd-drag-handle-context-id="0"
                  data-rbd-drag-handle-draggable-id="eip155:59144"
                  data-rbd-draggable-context-id="0"
                  data-rbd-draggable-id="eip155:59144"
                  draggable="false"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="mm-box multichain-network-list-item multichain-network-list-item--deselected multichain-network-list-item--not-selectable mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                    data-testid="network-list-item-eip155:59144"
                  >
                    <div
                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-sm mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                    >
                      <img
                        alt="Linea Mainnet logo"
                        class="mm-avatar-network__network-image"
                        src="./images/linea-logo-mainnet.svg"
                      />
                    </div>
                    <div
                      class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                      style="overflow: hidden;"
                    >
                      <div
                        class="mm-box mm-box--display-flex mm-box--align-items-center mm-box--width-full"
                        data-testid="Linea Mainnet"
                      >
                        <div
                          class="multichain-network-list-item__tooltip"
                        >
                          <div
                            class=""
                            style="display: inline;"
                            tabindex="0"
                            title=""
                          >
                            <p
                              class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                              tabindex="0"
                            >
                              Linea Mainnet
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                    <button
                      aria-label="Network options"
                      class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
                      data-testid="network-list-item-options-button-eip155:59144"
                    >
                      <span
                        class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                        style="mask-image: url('./images/icons/more-vertical.svg');"
                      />
                    </button>
                  </div>
                </div>
                <div
                  aria-describedby="rbd-hidden-text-0-hidden-text-0"
                  class="mm-box"
                  data-rbd-drag-handle-context-id="0"
                  data-rbd-drag-handle-draggable-id="eip155:56"
                  data-rbd-draggable-context-id="0"
                  data-rbd-draggable-id="eip155:56"
                  draggable="false"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="mm-box multichain-network-list-item multichain-network-list-item--deselected multichain-network-list-item--not-selectable mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                    data-testid="network-list-item-eip155:56"
                  >
                    <div
                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-sm mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                    >
                      <img
                        alt="BNB Chain logo"
                        class="mm-avatar-network__network-image"
                        src="./images/bnb.svg"
                      />
                    </div>
                    <div
                      class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                      style="overflow: hidden;"
                    >
                      <div
                        class="mm-box mm-box--display-flex mm-box--align-items-center mm-box--width-full"
                        data-testid="BNB Chain"
                      >
                        <div
                          class="multichain-network-list-item__tooltip"
                        >
                          <div
                            class=""
                            style="display: inline;"
                            tabindex="0"
                            title=""
                          >
                            <p
                              class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                              tabindex="0"
                            >
                              BNB Chain
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                    <button
                      aria-label="Network options"
                      class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
                      data-testid="network-list-item-options-button-eip155:56"
                    >
                      <span
                        class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                        style="mask-image: url('./images/icons/more-vertical.svg');"
                      />
                    </button>
                  </div>
                </div>
                <div
                  aria-describedby="rbd-hidden-text-0-hidden-text-0"
                  class="mm-box"
                  data-rbd-drag-handle-context-id="0"
                  data-rbd-drag-handle-draggable-id="eip155:5"
                  data-rbd-draggable-context-id="0"
                  data-rbd-draggable-id="eip155:5"
                  draggable="false"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="mm-box multichain-network-list-item multichain-network-list-item--deselected multichain-network-list-item--not-selectable mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                    data-testid="network-list-item-eip155:5"
                  >
                    <div
                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-sm mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                    >
                      C
                    </div>
                    <div
                      class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                      style="overflow: hidden;"
                    >
                      <div
                        class="mm-box mm-box--display-flex mm-box--align-items-center mm-box--width-full"
                        data-testid="Chain 5"
                      >
                        <div
                          class="multichain-network-list-item__tooltip"
                        >
                          <div
                            class=""
                            style="display: inline;"
                            tabindex="0"
                            title=""
                          >
                            <p
                              class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                              tabindex="0"
                            >
                              Chain 5
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                    <button
                      aria-label="Network options"
                      class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
                      data-testid="network-list-item-options-button-eip155:5"
                    >
                      <span
                        class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                        style="mask-image: url('./images/icons/more-vertical.svg');"
                      />
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="mm-box new-network-list__networks-container"
              >
                <div
                  class="mm-box mm-box--margin-top-4 mm-box--margin-bottom-1 mm-box--padding-right-4 mm-box--padding-left-4"
                >
                  <div
                    class="mm-box mm-box--margin-top-4 mm-box--margin-bottom-4 mm-box--display-flex mm-box--justify-content-space-between"
                  >
                    <div
                      class="mm-box mm-box--display-inline-flex"
                    >
                      <p
                        class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
                      >
                        Additional networks
                      </p>
                      <div
                        class="mm-box mm-box--margin-top-1"
                      >
                        <span
                          class="mm-box add-network__warning-icon mm-icon mm-icon--size-sm mm-box--margin-left-2 mm-box--display-inline-block mm-box--color-icon-muted"
                          style="mask-image: url('./images/icons/info.svg');"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="mm-box new-network-list__list-of-networks mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--display-flex mm-box--justify-content-space-between mm-box--align-items-center"
                    data-testid="popular-network-0xa4b1"
                  >
                    <div
                      class="mm-box mm-box--display-flex mm-box--align-items-center"
                    >
                      <div
                        class="mm-box mm-text mm-avatar-base mm-avatar-base--size-sm mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                      >
                        <img
                          alt="Arbitrum One logo"
                          class="mm-avatar-network__network-image"
                          src="./images/arbitrum.svg"
                        />
                      </div>
                      <div
                        class="mm-box mm-box--margin-left-4"
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                        >
                          Arbitrum One
                        </p>
                      </div>
                    </div>
                    <div
                      class="mm-box mm-box--margin-left-1 mm-box--display-flex mm-box--align-items-center"
                    >
                      <button
                        class="mm-box mm-text mm-button-base add-network__add-button mm-button-link mm-button-link--size-auto mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                        data-testid="test-add-button"
                        type="link"
                      >
                        Add
                      </button>
                    </div>
                  </div>
                  <div
                    class="mm-box new-network-list__list-of-networks mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--display-flex mm-box--justify-content-space-between mm-box--align-items-center"
                    data-testid="popular-network-0xa86a"
                  >
                    <div
                      class="mm-box mm-box--display-flex mm-box--align-items-center"
                    >
                      <div
                        class="mm-box mm-text mm-avatar-base mm-avatar-base--size-sm mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                      >
                        <img
                          alt="Avalanche Network C-Chain logo"
                          class="mm-avatar-network__network-image"
                          src="./images/avax-token.svg"
                        />
                      </div>
                      <div
                        class="mm-box mm-box--margin-left-4"
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                        >
                          Avalanche Network C-Chain
                        </p>
                      </div>
                    </div>
                    <div
                      class="mm-box mm-box--margin-left-1 mm-box--display-flex mm-box--align-items-center"
                    >
                      <button
                        class="mm-box mm-text mm-button-base add-network__add-button mm-button-link mm-button-link--size-auto mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                        data-testid="test-add-button"
                        type="link"
                      >
                        Add
                      </button>
                    </div>
                  </div>
                  <div
                    class="mm-box new-network-list__list-of-networks mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--display-flex mm-box--justify-content-space-between mm-box--align-items-center"
                    data-testid="popular-network-0x2105"
                  >
                    <div
                      class="mm-box mm-box--display-flex mm-box--align-items-center"
                    >
                      <div
                        class="mm-box mm-text mm-avatar-base mm-avatar-base--size-sm mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                      >
                        <img
                          alt="Base Mainnet logo"
                          class="mm-avatar-network__network-image"
                          src="./images/base.svg"
                        />
                      </div>
                      <div
                        class="mm-box mm-box--margin-left-4"
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                        >
                          Base Mainnet
                        </p>
                      </div>
                    </div>
                    <div
                      class="mm-box mm-box--margin-left-1 mm-box--display-flex mm-box--align-items-center"
                    >
                      <button
                        class="mm-box mm-text mm-button-base add-network__add-button mm-button-link mm-button-link--size-auto mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                        data-testid="test-add-button"
                        type="link"
                      >
                        Add
                      </button>
                    </div>
                  </div>
                  <div
                    class="mm-box new-network-list__list-of-networks mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--display-flex mm-box--justify-content-space-between mm-box--align-items-center"
                    data-testid="popular-network-0xa"
                  >
                    <div
                      class="mm-box mm-box--display-flex mm-box--align-items-center"
                    >
                      <div
                        class="mm-box mm-text mm-avatar-base mm-avatar-base--size-sm mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                      >
                        <img
                          alt="OP Mainnet logo"
                          class="mm-avatar-network__network-image"
                          src="./images/optimism.svg"
                        />
                      </div>
                      <div
                        class="mm-box mm-box--margin-left-4"
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                        >
                          OP Mainnet
                        </p>
                      </div>
                    </div>
                    <div
                      class="mm-box mm-box--margin-left-1 mm-box--display-flex mm-box--align-items-center"
                    >
                      <button
                        class="mm-box mm-text mm-button-base add-network__add-button mm-button-link mm-button-link--size-auto mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                        data-testid="test-add-button"
                        type="link"
                      >
                        Add
                      </button>
                    </div>
                  </div>
                  <div
                    class="mm-box new-network-list__list-of-networks mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--display-flex mm-box--justify-content-space-between mm-box--align-items-center"
                    data-testid="popular-network-0x89"
                  >
                    <div
                      class="mm-box mm-box--display-flex mm-box--align-items-center"
                    >
                      <div
                        class="mm-box mm-text mm-avatar-base mm-avatar-base--size-sm mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                      >
                        <img
                          alt="Polygon Mainnet logo"
                          class="mm-avatar-network__network-image"
                          src="./images/pol-token.svg"
                        />
                      </div>
                      <div
                        class="mm-box mm-box--margin-left-4"
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                        >
                          Polygon Mainnet
                        </p>
                      </div>
                    </div>
                    <div
                      class="mm-box mm-box--margin-left-1 mm-box--display-flex mm-box--align-items-center"
                    >
                      <button
                        class="mm-box mm-text mm-button-base add-network__add-button mm-button-link mm-button-link--size-auto mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                        data-testid="test-add-button"
                        type="link"
                      >
                        Add
                      </button>
                    </div>
                  </div>
                  <div
                    class="mm-box new-network-list__list-of-networks mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--display-flex mm-box--justify-content-space-between mm-box--align-items-center"
                    data-testid="popular-network-0x531"
                  >
                    <div
                      class="mm-box mm-box--display-flex mm-box--align-items-center"
                    >
                      <div
                        class="mm-box mm-text mm-avatar-base mm-avatar-base--size-sm mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                      >
                        <img
                          alt="Sei Mainnet logo"
                          class="mm-avatar-network__network-image"
                          src="./images/sei.svg"
                        />
                      </div>
                      <div
                        class="mm-box mm-box--margin-left-4"
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                        >
                          Sei Mainnet
                        </p>
                      </div>
                    </div>
                    <div
                      class="mm-box mm-box--margin-left-1 mm-box--display-flex mm-box--align-items-center"
                    >
                      <button
                        class="mm-box mm-text mm-button-base add-network__add-button mm-button-link mm-button-link--size-auto mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                        data-testid="test-add-button"
                        type="link"
                      >
                        Add
                      </button>
                    </div>
                  </div>
                  <div
                    class="mm-box new-network-list__list-of-networks mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--display-flex mm-box--justify-content-space-between mm-box--align-items-center"
                    data-testid="popular-network-0x144"
                  >
                    <div
                      class="mm-box mm-box--display-flex mm-box--align-items-center"
                    >
                      <div
                        class="mm-box mm-text mm-avatar-base mm-avatar-base--size-sm mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                      >
                        <img
                          alt="ZKsync Era Mainnet logo"
                          class="mm-avatar-network__network-image"
                          src="./images/zk-sync.svg"
                        />
                      </div>
                      <div
                        class="mm-box mm-box--margin-left-4"
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                        >
                          ZKsync Era Mainnet
                        </p>
                      </div>
                    </div>
                    <div
                      class="mm-box mm-box--margin-left-1 mm-box--display-flex mm-box--align-items-center"
                    >
                      <button
                        class="mm-box mm-text mm-button-base add-network__add-button mm-button-link mm-button-link--size-auto mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                        data-testid="test-add-button"
                        type="link"
                      >
                        Add
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="mm-box mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-space-between"
              >
                <p
                  class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
                >
                  Show test networks
                </p>
                <label
                  class="toggle-button toggle-button--off"
                  tabindex="0"
                >
                  <div
                    style="display: flex; width: 52px; align-items: center; justify-content: flex-start; position: relative; cursor: pointer; background-color: transparent; border: 0px; padding: 0px; user-select: none;"
                  >
                    <div
                      style="width: 40px; height: 24px; padding: 0px; border-radius: 26px; display: flex; align-items: center; justify-content: center; background-color: rgb(75, 80, 92);"
                    >
                      <div
                        style="font-size: 11px; display: flex; align-items: center; justify-content: center; font-family: 'Helvetica Neue', Helvetica, sans-serif; position: relative; color: rgb(250, 250, 250); margin-top: auto; margin-bottom: auto; line-height: 0; opacity: 0; width: 26px; height: 20px; left: 4px;"
                      />
                      <div
                        style="font-size: 11px; display: flex; align-items: center; justify-content: center; font-family: 'Helvetica Neue', Helvetica, sans-serif; position: relative; color: rgba(255, 255, 255, 0.6); bottom: 0px; margin-top: auto; margin-bottom: auto; padding-right: 5px; line-height: 0; width: 26px; height: 20px; opacity: 1;"
                      />
                    </div>
                    <div
                      style="position: absolute; height: 100%; top: 0px; left: 0px; display: flex; flex: 1; align-self: stretch; align-items: center; justify-content: flex-start;"
                    >
                      <div
                        style="width: 18px; height: 18px; display: flex; align-self: center; box-shadow: var(--shadow-size-xs) var(--color-shadow-default); border-radius: 50%; box-sizing: border-box; position: relative; background-color: rgb(255, 255, 255); left: 3px;"
                      />
                    </div>
                    <input
                      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px;"
                      type="checkbox"
                      value="false"
                    />
                  </div>
                  <div
                    class="toggle-button__status"
                  >
                    <span
                      class="toggle-button__label-off"
                    />
                    <span
                      class="toggle-button__label-on"
                    />
                  </div>
                </label>
              </div>
            </div>
          </div>
          <div
            class="mm-box mm-box--padding-4"
          >
            <button
              class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-base--block mm-button-secondary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-muted mm-box--rounded-xl"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-right-2 mm-box--margin-inline-end-1 mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/add.svg');"
              />
              Add a custom network
            </button>
          </div>
        </section>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="rbd-announcement-0"
    style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%);"
  />
  <div
    id="rbd-hidden-text-0-hidden-text-0"
    style="display: none;"
  >

  Press space bar to start a drag.
  When dragging you can use the arrow keys to move the item around and escape to cancel.
  Some screen readers may require you to be in focus mode or to use your pass through key

  </div>
</body>
`;

exports[`NetworkListMenu should match snapshot when adding a network 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="rbd-announcement-0"
    style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%);"
  />
  <div />
  <div
    class="mm-modal"
  >
    <div
      aria-hidden="true"
      class="mm-box mm-modal-overlay mm-box--width-full mm-box--height-full mm-box--background-color-overlay-default"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="mm-box mm-modal-content multichain-network-list-menu-content-wrapper mm-box--padding-0 mm-box--padding-top-4 mm-box--sm:padding-top-8 mm-box--md:padding-top-12 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--sm:padding-bottom-8 mm-box--md:padding-bottom-12 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-flex-start mm-box--width-screen mm-box--height-screen"
      >
        <section
          aria-modal="true"
          class="mm-box mm-modal-content__dialog mm-modal-content__dialog--size-sm multichain-network-list-menu-content-wrapper__dialog mm-box--padding-top-0 mm-box--padding-bottom-0 mm-box--display-flex mm-box--flex-direction-column mm-box--width-full mm-box--background-color-background-default mm-box--rounded-lg"
          role="dialog"
        >
          <header
            class="mm-box mm-header-base mm-modal-header mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-space-between"
          >
            <div
              class="mm-box"
              style="min-width: 0px;"
            >
              <button
                aria-label="Back"
                class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/arrow-left.svg');"
                />
              </button>
            </div>
            <div
              class="mm-box mm-box--width-full"
            >
              <h4
                class="mm-box mm-text mm-text--heading-sm mm-text--ellipsis mm-text--text-align-center mm-box--color-text-default"
              >
                Add a custom network
              </h4>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-flex-end"
              style="min-width: 0px;"
            >
              <button
                aria-label="Close"
                class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/close.svg');"
                />
              </button>
            </div>
          </header>
          <div
            class="mm-box networks-tab__scrollable mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-space-between mm-box--align-items-center mm-box--height-full"
          >
            <div
              class="mm-box mm-box--padding-right-4 mm-box--padding-bottom-2 mm-box--padding-left-4 mm-box--width-full"
            >
              <div
                class="mm-box mm-form-text-field mm-box--display-flex mm-box--flex-direction-column"
                data-testid="network-form-name-input"
              >
                <label
                  class="mm-box mm-text mm-label mm-label--html-for mm-form-text-field__label mm-text--body-md-medium mm-text--font-weight-medium mm-box--margin-bottom-1 mm-box--display-inline-flex mm-box--align-items-center mm-box--color-text-default"
                  for="networkName"
                >
                  Network name
                </label>
                <div
                  class="mm-box mm-text-field mm-text-field--size-lg mm-text-field--focused mm-text-field--truncate mm-form-text-field__text-field mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
                >
                  <input
                    autocomplete="off"
                    class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                    data-testid="network-form-network-name"
                    focused="true"
                    id="networkName"
                    placeholder="Enter network name"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="mm-box mm-box--padding-top-4"
              >
                <label
                  class="mm-box mm-text mm-label mm-text--body-md-medium mm-text--font-weight-medium mm-box--display-inline-flex mm-box--align-items-center mm-box--color-text-default"
                >
                  Default RPC URL
                </label>
                <div
                  class="mm-box dropdown-editor__item-dropdown mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-space-between mm-box--align-items-center mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
                >
                  <input
                    autocomplete="off"
                    class="mm-box mm-text mm-input dropdown-editor__item-placeholder mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-top-3 mm-box--padding-bottom-3 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                    placeholder="Add a URL"
                    readonly=""
                    tabindex="-1"
                    type="text"
                    value=""
                  />
                  <button
                    aria-label="Default RPC URL"
                    class="mm-box mm-button-icon mm-button-icon--size-md mm-box--margin-left-auto mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
                    data-testid="test-add-rpc-drop-down"
                  >
                    <span
                      class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                      style="mask-image: url('./images/icons/arrow-down.svg');"
                    />
                  </button>
                </div>
              </div>
              <div
                class="mm-box mm-form-text-field mm-box--padding-top-4 mm-box--display-flex mm-box--flex-direction-column"
                data-testid="network-form-chain-id-input"
              >
                <label
                  class="mm-box mm-text mm-label mm-label--html-for mm-form-text-field__label mm-text--body-md-medium mm-text--font-weight-medium mm-box--margin-bottom-1 mm-box--display-inline-flex mm-box--align-items-center mm-box--color-text-default"
                  for="chainId"
                >
                  Chain ID
                </label>
                <div
                  class="mm-box mm-text-field mm-text-field--size-lg mm-text-field--truncate mm-form-text-field__text-field mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
                >
                  <input
                    autocomplete="off"
                    class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                    data-testid="network-form-chain-id"
                    focused="false"
                    id="chainId"
                    placeholder="Enter Chain ID"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="mm-box mm-form-text-field mm-box--padding-top-4 mm-box--display-flex mm-box--flex-direction-column"
                data-testid="network-form-ticker"
              >
                <label
                  class="mm-box mm-text mm-label mm-label--html-for mm-form-text-field__label mm-text--body-md-medium mm-text--font-weight-medium mm-box--margin-bottom-1 mm-box--display-inline-flex mm-box--align-items-center mm-box--color-text-default"
                  for="nativeCurrency"
                >
                  Currency symbol
                </label>
                <div
                  class="mm-box mm-text-field mm-text-field--size-lg mm-text-field--truncate mm-form-text-field__text-field mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
                >
                  <input
                    autocomplete="off"
                    class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                    data-testid="network-form-ticker-input"
                    focused="false"
                    id="nativeCurrency"
                    placeholder="Enter symbol"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="mm-box mm-box--padding-top-4"
              >
                <label
                  class="mm-box mm-text mm-label mm-text--body-md-medium mm-text--font-weight-medium mm-box--display-inline-flex mm-box--align-items-center mm-box--color-text-default"
                >
                  Block explorer URL
                </label>
                <div
                  class="mm-box dropdown-editor__item-dropdown mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-space-between mm-box--align-items-center mm-box--rounded-lg mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
                >
                  <input
                    autocomplete="off"
                    class="mm-box mm-text mm-input dropdown-editor__item-placeholder mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-top-3 mm-box--padding-bottom-3 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                    placeholder="Add a URL"
                    readonly=""
                    tabindex="-1"
                    type="text"
                    value=""
                  />
                  <button
                    aria-label="Block explorer URL"
                    class="mm-box mm-button-icon mm-button-icon--size-md mm-box--margin-left-auto mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
                    data-testid="test-explorer-drop-down"
                  >
                    <span
                      class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                      style="mask-image: url('./images/icons/arrow-down.svg');"
                    />
                  </button>
                </div>
                <div
                  class="mm-box mm-box--margin-top-2 mm-box--display-none mm-box--rounded-lg mm-box--border-color-border-muted box--border-style-solid box--border-width-1"
                >
                  <div
                    class="mm-box"
                  >
                    <div
                      class="mm-box dropdown-editor__item mm-box--padding-4 mm-box--display-flex mm-box--align-items-center"
                    >
                      <span
                        class="mm-box mm-icon mm-icon--size-sm mm-box--margin-right-2 mm-box--display-inline-block mm-box--color-primary-default"
                        style="mask-image: url('./images/icons/add.svg');"
                      />
                      <button
                        class="mm-box mm-text mm-text--body-sm-medium mm-box--color-primary-default mm-box--background-color-transparent"
                      >
                        Add a block explorer URL
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mm-box networks-tab__network-form__footer mm-box--padding-4 mm-box--width-full mm-box--background-color-background-default"
            >
              <button
                class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-base--disabled mm-button-primary mm-button-primary--disabled mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-icon-inverse mm-box--background-color-icon-default mm-box--rounded-xl"
                disabled=""
              >
                Save
              </button>
            </div>
          </div>
        </section>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`NetworkListMenu should match snapshot when editing a network 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="rbd-announcement-0"
    style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%);"
  />
  <div />
  <div
    class="mm-modal"
  >
    <div
      aria-hidden="true"
      class="mm-box mm-modal-overlay mm-box--width-full mm-box--height-full mm-box--background-color-overlay-default"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="mm-box mm-modal-content multichain-network-list-menu-content-wrapper mm-box--padding-0 mm-box--padding-top-4 mm-box--sm:padding-top-8 mm-box--md:padding-top-12 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--sm:padding-bottom-8 mm-box--md:padding-bottom-12 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-flex-start mm-box--width-screen mm-box--height-screen"
      >
        <section
          aria-modal="true"
          class="mm-box mm-modal-content__dialog mm-modal-content__dialog--size-sm multichain-network-list-menu-content-wrapper__dialog mm-box--padding-top-0 mm-box--padding-bottom-0 mm-box--display-flex mm-box--flex-direction-column mm-box--width-full mm-box--background-color-background-default mm-box--rounded-lg"
          role="dialog"
        >
          <header
            class="mm-box mm-header-base mm-modal-header mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-space-between"
          >
            <div
              class="mm-box mm-box--width-full"
            >
              <h4
                class="mm-box mm-text mm-text--heading-sm mm-text--ellipsis mm-text--text-align-center mm-box--color-text-default"
              >
                Manage networks
              </h4>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--justify-content-flex-end"
              style="min-width: 0px;"
            >
              <button
                aria-label="Close"
                class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/close.svg');"
                />
              </button>
            </div>
          </header>
          <div
            class="mm-box multichain-network-list-menu"
          >
            <div
              class="mm-box mm-box--padding-top-0 mm-box--padding-right-4 mm-box--padding-bottom-2 mm-box--padding-left-4"
            >
              <div
                class="mm-box mm-text-field mm-text-field--size-lg mm-text-field--focused mm-text-field--truncate mm-text-field-search mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--width-full mm-box--background-color-background-default mm-box--rounded-md mm-box--border-width-1 box--border-style-solid"
                data-testid="search-list"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/search.svg');"
                />
                <input
                  autocomplete="off"
                  class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--margin-right-6 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                  data-testid="network-redesign-modal-search-input"
                  focused="true"
                  placeholder="Search"
                  type="search"
                  value=""
                />
              </div>
            </div>
            <div
              class="mm-box"
            >
              <div
                class="mm-box mm-box--padding-4 mm-box--display-flex mm-box--justify-content-space-between"
              >
                <p
                  class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
                >
                  Enabled networks
                </p>
              </div>
              <div
                class="mm-box characters"
                data-rbd-droppable-context-id="1"
                data-rbd-droppable-id="characters"
              >
                <div
                  aria-describedby="rbd-hidden-text-1-hidden-text-6"
                  class="mm-box"
                  data-rbd-drag-handle-context-id="1"
                  data-rbd-drag-handle-draggable-id="eip155:1"
                  data-rbd-draggable-context-id="1"
                  data-rbd-draggable-id="eip155:1"
                  draggable="false"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="mm-box multichain-network-list-item multichain-network-list-item--deselected multichain-network-list-item--not-selectable mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                    data-testid="network-list-item-eip155:1"
                  >
                    <div
                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-sm mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                    >
                      <img
                        alt="Ethereum Mainnet logo"
                        class="mm-avatar-network__network-image"
                        src="./images/eth_logo.svg"
                      />
                    </div>
                    <div
                      class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                      style="overflow: hidden;"
                    >
                      <div
                        class="mm-box mm-box--display-flex mm-box--align-items-center mm-box--width-full"
                        data-testid="Ethereum Mainnet"
                      >
                        <div
                          class="multichain-network-list-item__tooltip"
                        >
                          <div
                            class=""
                            style="display: inline;"
                            tabindex="0"
                            title=""
                          >
                            <p
                              class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                              tabindex="0"
                            >
                              Ethereum Mainnet
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                    <button
                      aria-label="Network options"
                      class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
                      data-testid="network-list-item-options-button-eip155:1"
                    >
                      <span
                        class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                        style="mask-image: url('./images/icons/more-vertical.svg');"
                      />
                    </button>
                  </div>
                </div>
                <div
                  aria-describedby="rbd-hidden-text-1-hidden-text-6"
                  class="mm-box"
                  data-rbd-drag-handle-context-id="1"
                  data-rbd-drag-handle-draggable-id="eip155:59144"
                  data-rbd-draggable-context-id="1"
                  data-rbd-draggable-id="eip155:59144"
                  draggable="false"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="mm-box multichain-network-list-item multichain-network-list-item--deselected multichain-network-list-item--not-selectable mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                    data-testid="network-list-item-eip155:59144"
                  >
                    <div
                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-sm mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                    >
                      <img
                        alt="Linea Mainnet logo"
                        class="mm-avatar-network__network-image"
                        src="./images/linea-logo-mainnet.svg"
                      />
                    </div>
                    <div
                      class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                      style="overflow: hidden;"
                    >
                      <div
                        class="mm-box mm-box--display-flex mm-box--align-items-center mm-box--width-full"
                        data-testid="Linea Mainnet"
                      >
                        <div
                          class="multichain-network-list-item__tooltip"
                        >
                          <div
                            class=""
                            style="display: inline;"
                            tabindex="0"
                            title=""
                          >
                            <p
                              class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                              tabindex="0"
                            >
                              Linea Mainnet
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                    <button
                      aria-label="Network options"
                      class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
                      data-testid="network-list-item-options-button-eip155:59144"
                    >
                      <span
                        class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                        style="mask-image: url('./images/icons/more-vertical.svg');"
                      />
                    </button>
                  </div>
                </div>
                <div
                  aria-describedby="rbd-hidden-text-1-hidden-text-6"
                  class="mm-box"
                  data-rbd-drag-handle-context-id="1"
                  data-rbd-drag-handle-draggable-id="eip155:56"
                  data-rbd-draggable-context-id="1"
                  data-rbd-draggable-id="eip155:56"
                  draggable="false"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="mm-box multichain-network-list-item multichain-network-list-item--deselected multichain-network-list-item--not-selectable mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                    data-testid="network-list-item-eip155:56"
                  >
                    <div
                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-sm mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                    >
                      <img
                        alt="BNB Chain logo"
                        class="mm-avatar-network__network-image"
                        src="./images/bnb.svg"
                      />
                    </div>
                    <div
                      class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                      style="overflow: hidden;"
                    >
                      <div
                        class="mm-box mm-box--display-flex mm-box--align-items-center mm-box--width-full"
                        data-testid="BNB Chain"
                      >
                        <div
                          class="multichain-network-list-item__tooltip"
                        >
                          <div
                            class=""
                            style="display: inline;"
                            tabindex="0"
                            title=""
                          >
                            <p
                              class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                              tabindex="0"
                            >
                              BNB Chain
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                    <button
                      aria-label="Network options"
                      class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
                      data-testid="network-list-item-options-button-eip155:56"
                    >
                      <span
                        class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                        style="mask-image: url('./images/icons/more-vertical.svg');"
                      />
                    </button>
                  </div>
                </div>
                <div
                  aria-describedby="rbd-hidden-text-1-hidden-text-6"
                  class="mm-box"
                  data-rbd-drag-handle-context-id="1"
                  data-rbd-drag-handle-draggable-id="eip155:5"
                  data-rbd-draggable-context-id="1"
                  data-rbd-draggable-id="eip155:5"
                  draggable="false"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="mm-box multichain-network-list-item multichain-network-list-item--deselected multichain-network-list-item--not-selectable mm-box--padding-top-4 mm-box--padding-right-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--gap-4 mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full mm-box--background-color-transparent"
                    data-testid="network-list-item-eip155:5"
                  >
                    <div
                      class="mm-box mm-text mm-avatar-base mm-avatar-base--size-sm mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                    >
                      C
                    </div>
                    <div
                      class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--justify-content-flex-start mm-box--align-items-flex-start mm-box--width-full"
                      style="overflow: hidden;"
                    >
                      <div
                        class="mm-box mm-box--display-flex mm-box--align-items-center mm-box--width-full"
                        data-testid="Chain 5"
                      >
                        <div
                          class="multichain-network-list-item__tooltip"
                        >
                          <div
                            class=""
                            style="display: inline;"
                            tabindex="0"
                            title=""
                          >
                            <p
                              class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                              tabindex="0"
                            >
                              Chain 5
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                    <button
                      aria-label="Network options"
                      class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
                      data-testid="network-list-item-options-button-eip155:5"
                    >
                      <span
                        class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                        style="mask-image: url('./images/icons/more-vertical.svg');"
                      />
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="mm-box new-network-list__networks-container"
              >
                <div
                  class="mm-box mm-box--margin-top-4 mm-box--margin-bottom-1 mm-box--padding-right-4 mm-box--padding-left-4"
                >
                  <div
                    class="mm-box mm-box--margin-top-4 mm-box--margin-bottom-4 mm-box--display-flex mm-box--justify-content-space-between"
                  >
                    <div
                      class="mm-box mm-box--display-inline-flex"
                    >
                      <p
                        class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
                      >
                        Additional networks
                      </p>
                      <div
                        class="mm-box mm-box--margin-top-1"
                      >
                        <span
                          class="mm-box add-network__warning-icon mm-icon mm-icon--size-sm mm-box--margin-left-2 mm-box--display-inline-block mm-box--color-icon-muted"
                          style="mask-image: url('./images/icons/info.svg');"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="mm-box new-network-list__list-of-networks mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--display-flex mm-box--justify-content-space-between mm-box--align-items-center"
                    data-testid="popular-network-0xa4b1"
                  >
                    <div
                      class="mm-box mm-box--display-flex mm-box--align-items-center"
                    >
                      <div
                        class="mm-box mm-text mm-avatar-base mm-avatar-base--size-sm mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                      >
                        <img
                          alt="Arbitrum One logo"
                          class="mm-avatar-network__network-image"
                          src="./images/arbitrum.svg"
                        />
                      </div>
                      <div
                        class="mm-box mm-box--margin-left-4"
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                        >
                          Arbitrum One
                        </p>
                      </div>
                    </div>
                    <div
                      class="mm-box mm-box--margin-left-1 mm-box--display-flex mm-box--align-items-center"
                    >
                      <button
                        class="mm-box mm-text mm-button-base add-network__add-button mm-button-link mm-button-link--size-auto mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                        data-testid="test-add-button"
                        type="link"
                      >
                        Add
                      </button>
                    </div>
                  </div>
                  <div
                    class="mm-box new-network-list__list-of-networks mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--display-flex mm-box--justify-content-space-between mm-box--align-items-center"
                    data-testid="popular-network-0xa86a"
                  >
                    <div
                      class="mm-box mm-box--display-flex mm-box--align-items-center"
                    >
                      <div
                        class="mm-box mm-text mm-avatar-base mm-avatar-base--size-sm mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                      >
                        <img
                          alt="Avalanche Network C-Chain logo"
                          class="mm-avatar-network__network-image"
                          src="./images/avax-token.svg"
                        />
                      </div>
                      <div
                        class="mm-box mm-box--margin-left-4"
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                        >
                          Avalanche Network C-Chain
                        </p>
                      </div>
                    </div>
                    <div
                      class="mm-box mm-box--margin-left-1 mm-box--display-flex mm-box--align-items-center"
                    >
                      <button
                        class="mm-box mm-text mm-button-base add-network__add-button mm-button-link mm-button-link--size-auto mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                        data-testid="test-add-button"
                        type="link"
                      >
                        Add
                      </button>
                    </div>
                  </div>
                  <div
                    class="mm-box new-network-list__list-of-networks mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--display-flex mm-box--justify-content-space-between mm-box--align-items-center"
                    data-testid="popular-network-0x2105"
                  >
                    <div
                      class="mm-box mm-box--display-flex mm-box--align-items-center"
                    >
                      <div
                        class="mm-box mm-text mm-avatar-base mm-avatar-base--size-sm mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                      >
                        <img
                          alt="Base Mainnet logo"
                          class="mm-avatar-network__network-image"
                          src="./images/base.svg"
                        />
                      </div>
                      <div
                        class="mm-box mm-box--margin-left-4"
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                        >
                          Base Mainnet
                        </p>
                      </div>
                    </div>
                    <div
                      class="mm-box mm-box--margin-left-1 mm-box--display-flex mm-box--align-items-center"
                    >
                      <button
                        class="mm-box mm-text mm-button-base add-network__add-button mm-button-link mm-button-link--size-auto mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                        data-testid="test-add-button"
                        type="link"
                      >
                        Add
                      </button>
                    </div>
                  </div>
                  <div
                    class="mm-box new-network-list__list-of-networks mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--display-flex mm-box--justify-content-space-between mm-box--align-items-center"
                    data-testid="popular-network-0xa"
                  >
                    <div
                      class="mm-box mm-box--display-flex mm-box--align-items-center"
                    >
                      <div
                        class="mm-box mm-text mm-avatar-base mm-avatar-base--size-sm mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                      >
                        <img
                          alt="OP Mainnet logo"
                          class="mm-avatar-network__network-image"
                          src="./images/optimism.svg"
                        />
                      </div>
                      <div
                        class="mm-box mm-box--margin-left-4"
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                        >
                          OP Mainnet
                        </p>
                      </div>
                    </div>
                    <div
                      class="mm-box mm-box--margin-left-1 mm-box--display-flex mm-box--align-items-center"
                    >
                      <button
                        class="mm-box mm-text mm-button-base add-network__add-button mm-button-link mm-button-link--size-auto mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                        data-testid="test-add-button"
                        type="link"
                      >
                        Add
                      </button>
                    </div>
                  </div>
                  <div
                    class="mm-box new-network-list__list-of-networks mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--display-flex mm-box--justify-content-space-between mm-box--align-items-center"
                    data-testid="popular-network-0x89"
                  >
                    <div
                      class="mm-box mm-box--display-flex mm-box--align-items-center"
                    >
                      <div
                        class="mm-box mm-text mm-avatar-base mm-avatar-base--size-sm mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                      >
                        <img
                          alt="Polygon Mainnet logo"
                          class="mm-avatar-network__network-image"
                          src="./images/pol-token.svg"
                        />
                      </div>
                      <div
                        class="mm-box mm-box--margin-left-4"
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                        >
                          Polygon Mainnet
                        </p>
                      </div>
                    </div>
                    <div
                      class="mm-box mm-box--margin-left-1 mm-box--display-flex mm-box--align-items-center"
                    >
                      <button
                        class="mm-box mm-text mm-button-base add-network__add-button mm-button-link mm-button-link--size-auto mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                        data-testid="test-add-button"
                        type="link"
                      >
                        Add
                      </button>
                    </div>
                  </div>
                  <div
                    class="mm-box new-network-list__list-of-networks mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--display-flex mm-box--justify-content-space-between mm-box--align-items-center"
                    data-testid="popular-network-0x531"
                  >
                    <div
                      class="mm-box mm-box--display-flex mm-box--align-items-center"
                    >
                      <div
                        class="mm-box mm-text mm-avatar-base mm-avatar-base--size-sm mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                      >
                        <img
                          alt="Sei Mainnet logo"
                          class="mm-avatar-network__network-image"
                          src="./images/sei.svg"
                        />
                      </div>
                      <div
                        class="mm-box mm-box--margin-left-4"
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                        >
                          Sei Mainnet
                        </p>
                      </div>
                    </div>
                    <div
                      class="mm-box mm-box--margin-left-1 mm-box--display-flex mm-box--align-items-center"
                    >
                      <button
                        class="mm-box mm-text mm-button-base add-network__add-button mm-button-link mm-button-link--size-auto mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                        data-testid="test-add-button"
                        type="link"
                      >
                        Add
                      </button>
                    </div>
                  </div>
                  <div
                    class="mm-box new-network-list__list-of-networks mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--display-flex mm-box--justify-content-space-between mm-box--align-items-center"
                    data-testid="popular-network-0x144"
                  >
                    <div
                      class="mm-box mm-box--display-flex mm-box--align-items-center"
                    >
                      <div
                        class="mm-box mm-text mm-avatar-base mm-avatar-base--size-sm mm-avatar-network mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                      >
                        <img
                          alt="zkSync Era Mainnet logo"
                          class="mm-avatar-network__network-image"
                          src="./images/zk-sync.svg"
                        />
                      </div>
                      <div
                        class="mm-box mm-box--margin-left-4"
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-text--ellipsis mm-box--color-text-default mm-box--background-color-transparent"
                        >
                          zkSync Era Mainnet
                        </p>
                      </div>
                    </div>
                    <div
                      class="mm-box mm-box--margin-left-1 mm-box--display-flex mm-box--align-items-center"
                    >
                      <button
                        class="mm-box mm-text mm-button-base add-network__add-button mm-button-link mm-button-link--size-auto mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                        data-testid="test-add-button"
                        type="link"
                      >
                        Add
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="mm-box mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--padding-left-4 mm-box--display-flex mm-box--justify-content-space-between"
              >
                <p
                  class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
                >
                  Show test networks
                </p>
                <label
                  class="toggle-button toggle-button--off"
                  tabindex="0"
                >
                  <div
                    style="display: flex; width: 52px; align-items: center; justify-content: flex-start; position: relative; cursor: pointer; background-color: transparent; border: 0px; padding: 0px; user-select: none;"
                  >
                    <div
                      style="width: 40px; height: 24px; padding: 0px; border-radius: 26px; display: flex; align-items: center; justify-content: center; background-color: rgb(75, 80, 92);"
                    >
                      <div
                        style="font-size: 11px; display: flex; align-items: center; justify-content: center; font-family: 'Helvetica Neue', Helvetica, sans-serif; position: relative; color: rgb(250, 250, 250); margin-top: auto; margin-bottom: auto; line-height: 0; opacity: 0; width: 26px; height: 20px; left: 4px;"
                      />
                      <div
                        style="font-size: 11px; display: flex; align-items: center; justify-content: center; font-family: 'Helvetica Neue', Helvetica, sans-serif; position: relative; color: rgba(255, 255, 255, 0.6); bottom: 0px; margin-top: auto; margin-bottom: auto; padding-right: 5px; line-height: 0; width: 26px; height: 20px; opacity: 1;"
                      />
                    </div>
                    <div
                      style="position: absolute; height: 100%; top: 0px; left: 0px; display: flex; flex: 1; align-self: stretch; align-items: center; justify-content: flex-start;"
                    >
                      <div
                        style="width: 18px; height: 18px; display: flex; align-self: center; box-shadow: var(--shadow-size-xs) var(--color-shadow-default); border-radius: 50%; box-sizing: border-box; position: relative; background-color: rgb(255, 255, 255); left: 3px;"
                      />
                    </div>
                    <input
                      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px;"
                      type="checkbox"
                      value="false"
                    />
                  </div>
                  <div
                    class="toggle-button__status"
                  >
                    <span
                      class="toggle-button__label-off"
                    />
                    <span
                      class="toggle-button__label-on"
                    />
                  </div>
                </label>
              </div>
            </div>
          </div>
          <div
            class="mm-box mm-box--padding-4"
          >
            <button
              class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-base--block mm-button-secondary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-muted mm-box--rounded-xl"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-right-2 mm-box--margin-inline-end-1 mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/add.svg');"
              />
              Add a custom network
            </button>
          </div>
        </section>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="rbd-announcement-1"
    style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%);"
  />
  <div
    id="rbd-hidden-text-1-hidden-text-6"
    style="display: none;"
  >
    
  Press space bar to start a drag.
  When dragging you can use the arrow keys to move the item around and escape to cancel.
  Some screen readers may require you to be in focus mode or to use your pass through key

  </div>
</body>
`;
